--- a/public/login.html
+++ b/public/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Campus Connect</title>
@@ -18,24 +18,11 @@
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 
     <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css"/>
+    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
-    <script src="js/index.js" defer></script>
-</head>
-<body>
-<div class="container row mt-3">
-    <div class="col-10">
-        <h2>Campus Connect</h2>
-    </div>
-    <div class="col-2">
-        <a type="button" class="btn btn-primary" href="/login">Write Review</a>
-    </div>
-</div>
-<div id="colleges"
-     class="d-flex align-content-center align-items-center justify-content-evenly mt-5 flex-wrap">
-</div>
-</body>
+    <script src="js/login.js" defer></script>
+  </head>
+  <body>
+    <div id="firebaseui-auth-container"></div>
+  </body>
 </html>
