--- a/public/read.html
+++ b/public/read.html
@@ -23,7 +23,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
-    <script src="js/index.js" defer></script>
+    <script src="js/read.js" defer></script>
 </head>
 <body>
 <div class="container row mt-3">
@@ -34,8 +34,8 @@
         <a type="button" class="btn btn-primary" href="/login">Write Review</a>
     </div>
 </div>
-<div id="colleges"
-     class="d-flex align-content-center align-items-center justify-content-evenly mt-5 flex-wrap">
+<div id="reviews"
+     class="container d-flex align-content-center align-items-center justify-content-evenly mt-5 flex-wrap">
 </div>
 </body>
 </html>
