--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,15 @@
 </head>
 <body>
 <div class="container row mt-3">
-    <div class="col-10">
+    <div class="col-3 d-sm-none d-md-block">
         <h2>Campus Connect</h2>
+    </div>
+    <div class="col-7">
+        <div class="input-group">
+            <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
+                   aria-describedby="search-addon" id="search" />
+            <button type="button" class="btn btn-outline-primary">search</button>
+        </div>
     </div>
     <div class="col-2">
         <a type="button" class="btn btn-primary" href="/login">Write Review</a>
