--- a/public/index.html
+++ b/public/index.html
@@ -5,44 +5,132 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Campus Connect</title>
 
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/9.18.0/firebase-app-compat.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/9.18.0/firebase-auth-compat.js"></script>
-    <script defer src="/__/firebase/9.18.0/firebase-firestore-compat.js"></script>
-
-    <!--
-      initialize the SDK after all desired features are loaded, set useEmulator to false
-      to avoid connecting the SDK to running emulators.
-    -->
-    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
-
-    <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css"/>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
-    <script src="js/index.js" defer></script>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-<div class="container row mt-3">
-    <div class="col-3 d-sm-none d-md-block">
-        <h2>Campus Connect</h2>
+<div class="container">
+    <nav id="navbar">
+        <div class="nav-logo">
+
+            <h1><a href="index.html">Campus Connect</a></h1>
+            <button>Menu</button>
+
+
+        </div>
+        <ul>
+            <li><a class="textgreen" href="/home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Service</a></li>
+        </ul>
+    </nav>
+    <div class="content">
+        <h3>Global Warming</h3>
+        <h1>Save Forest And Save Earth</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt utadipiscing
+            elit sed do eiusmod tempor incididunt Lorem</p>
+
+        <button class="btn-green" onclick="location.href='/home'">Join Us</button>
+
     </div>
-    <div class="col-7">
-        <div class="input-group">
-            <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
-                   aria-describedby="search-addon" id="search" />
-            <button type="button" class="btn btn-outline-primary">search</button>
+
+
+</div>
+<div class="context textcenter ">
+
+    <h3 class="textgreen" id="about">What we do</h3>
+
+
+    <h2>STANDING TOGETHER FOR A BETTER WORLD</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit<br>
+        Lorem ipsum dolor sit amet, consectetur
+    </p>
+
+</div>
+<div class="container2">
+    <div class="fern">
+        <img src="https://raw.githubusercontent.com/Nis-chal/web-dev/main/images/ab1.jpg" alt="">
+
+    </div>
+
+
+    <div class="context2">
+
+        <div class="ferncontext">
+            <h3 class="textgreen">About Us</h3>
+            <h3 class="lightertext">we cannot afford to fail in our mission to save a living planet</h3>
+            <p>delectus reiciendis maiores alias consequatur aut.maiores alias Lorem ipsum dolor sit amet,
+                consectetur
+                adipiscing elit sed do eiusmod delectus reiciendis maiores alias consequatur aut.maiores alias Lorem
+                ipsum
+                dolor sit amet, consectetur</p>
+
         </div>
     </div>
-    <div class="col-2">
-        <a type="button" class="btn btn-primary" href="/login">Write Review</a>
-    </div>
 </div>
-<div id="colleges"
-     class="d-flex align-content-center align-items-center justify-content-evenly mt-5 flex-wrap">
+
+
+<!-- forest forest forest forest forest forestforestforestforestforestforestforest-->
+
+
+<div class="forest">
+
+    <div class="forest__context" id="services">
+        <div class="forest--text">
+            <div class="forest__paragraph">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                    labore
+                </p>
+            </div>
+            <div class="forest__heading">
+                <h3>What we provide</h3>
+                <h1>Our Services</h1>
+            </div>
+        </div>
+    </div>
+
+    <div class="forest--boxes">
+
+        <div class="box">
+            <span><i class="fab fa-pagelines"></i></span>
+            <h2>Planting</h2>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit</p>
+        </div>
+
+
+        <div class="box">
+            <span><i class="fa-solid fa-paw"></i></span>
+            <h2>Wildlife</h2>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit</p>
+        </div>
+
+        <div class="box">
+            <span><i class="fas fa-tree"></i></span>
+            <h2>Save Plants</h2>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit</p>
+        </div>
+
+        <div class="box">
+            <span><i class="fas fa-tint"></i></span>
+            <h2>Watering</h2>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit</p>
+        </div>
+
+        <div class="box">
+            <span><i class="fab fa-envira"></i></span>
+            <h2>Save Trees</h2>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit</p>
+        </div>
+
+
+        <div class="box">
+            <span><i class="far fa-snowflake"></i></span>
+            <h2>Eco Climate</h2>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit</p>
+        </div>
+
+
+    </div>
 </div>
 </body>
 </html>
